💄 Correct card gap

--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -150,12 +150,13 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 420px;
+  height: 440px;
   max-width: 280px;
   margin: 0 auto;
   background-color: $white;
   border-radius: 0.5rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin-bottom: 2rem;
 
   figure {
     position: relative;
@@ -286,7 +287,7 @@ h3 {
 
     button.main-button-style {
       width: 90%;
-      min-width: 200px;
+      min-width: 150px;
     }
 
     .dashboard-property-buttons {
